@@ -5262,7 +5262,7 @@ class="element-name">'feCustom'</span></h2>
 
 <p>
   The <i>multiplied color</i> and the <i>mix color</i> get composed using the alpha-compositing rules as described in the Compositing and Blending
-  spec [[compositing]]. The applied alpha-compositing mode is specified by the passed &lt;alpha-compositing&gt; paramter and is ''source-over'' by default.
+  spec [[compositing]]. The applied alpha-compositing mode is specified by the passed &lt;alpha-compositing&gt; parameter and is ''source-atop'' by default.
 </p>
 
 <p>
@@ -5837,10 +5837,12 @@ void main()
 
   <p>The CSS 'filter' property is animatable. Interpolation happens between the filter functions 
       only if the 'filter' values have the same number of filter functions, and the same functions appearing in the same order.</p>
+
+  <p class="issue">The CSS WG may define different fading transitions in the future.</p>
       
-  <h3 id="filter-params-interpolation">Interpolating filter functions parameters</h3>
+  <h3 id="filter-params-interpolation">Interpolating filter function parameters</h3>
   
-  <p class="todo">This section has to be written.</p>
+  <p>All properties defined as animatable, provided they are one of the property types listed in CSS3 Transitions [[!CSS3-TRANSITIONS]], can be animated.</p>
 
   <h3 id="shader-params-interpolation">Interpolating the shader-params component in the custom() function.</h3>
 
