@@ -75,14 +75,14 @@
 
    <h1>Filter Effects 1.0</h1>
 
-   <h2 class="no-num no-toc" id=longstatus-date>Editor's Draft 7 August 2012</h2>
+   <h2 class="no-num no-toc" id=longstatus-date>Editor's Draft 10 August 2012</h2>
 
    <dl>
     <dt>This version:
 
     <dd> <a
      href="http://dvcs.w3.org/hg/FXTF/raw-file/tip/filters/index.html">http://dvcs.w3.org/hg/FXTF/raw-file/tip/filters/index.html</a>
-     <!--http://www.w3.org/TR/2012/WD-filter-effects-20120807/-->
+     <!--http://www.w3.org/TR/2012/WD-filter-effects-20120810/-->
 
     <dt>Latest version:
 
@@ -466,7 +466,7 @@
     Transitions</a>
     <ul class=toc>
      <li><a href="#filter-params-interpolation"><span class=secno>39.1.
-      </span>Interpolating filter functions parameters</a>
+      </span>Interpolating filter function parameters</a>
 
      <li><a href="#shader-params-interpolation"><span class=secno>39.2.
       </span>Interpolating the shader-params component in the custom()
@@ -1938,17 +1938,17 @@
    class=property>filter</code>’</a> elements are never rendered directly;
    their only usage is as something that can be referenced using the ‘<a
    href="#filter"><code class=property>filter</code></a>’ property. The <a
-   class=property href="HASH(0x7fd989048328)">‘<code
+   class=property href="HASH(0x7f9f14048328)">‘<code
    class=property>display</code>’</a> property does not apply to the <a
    class=element-name href="#FilterElement">‘<code
    class=property>filter</code>’</a> element; thus, <a class=element-name
    href="#FilterElement">‘<code class=property>filter</code>’</a>
    elements are not directly rendered even if the <a class=property
-   href="HASH(0x7fd989048328)">‘<code class=property>display</code>’</a>
+   href="HASH(0x7f9f14048328)">‘<code class=property>display</code>’</a>
    property is set to a value other than <span class=prop-value>none</span>,
    and <a class=element-name href="#FilterElement">‘<code
    class=property>filter</code>’</a> elements are available for referencing
-   even when the <a class=property href="HASH(0x7fd989048328)">‘<code
+   even when the <a class=property href="HASH(0x7f9f14048328)">‘<code
    class=property>display</code>’</a> property on the <a class=element-name
    href="#FilterElement">‘<code class=property>filter</code>’</a> element
    or any of its ancestors is set to <span class=prop-value>none</span>.
@@ -2514,29 +2514,29 @@
   <p id=filtersColorSpace>The color space in which a particular <a
    href="#TermFilterPrimitiveElement">filter primitive</a> performs its
    operations is determined by the value of property <a class=property
-   href="HASH(0x7fd98904bbc0)">‘<code
+   href="HASH(0x7f9f1404bbc0)">‘<code
    class=property>color-interpolation-filters</code>’</a> on the given <a
    href="#TermFilterPrimitiveElement">filter primitive</a>. A different
-   property, <a class=property href="HASH(0x7fd9890484d8)">‘<code
+   property, <a class=property href="HASH(0x7f9f140484d8)">‘<code
    class=property>color-interpolation</code>’</a> determines the color
    space for other color operations. Because these two properties have
    different initial values (<a class=property
-   href="HASH(0x7fd98904bbc0)">‘<code
+   href="HASH(0x7f9f1404bbc0)">‘<code
    class=property>color-interpolation-filters</code>’</a> has an initial
    value of <span class=prop-value>linearRGB</span> whereas <a class=property
-   href="HASH(0x7fd9890484d8)">‘<code
+   href="HASH(0x7f9f140484d8)">‘<code
    class=property>color-interpolation</code>’</a> has an initial value of
    ‘<code class=css>sRGB</code>’), in some cases to achieve certain
    results (e.g., when coordinating gradient interpolation with a filtering
    operation) it will be necessary to explicitly set <a class=property
-   href="HASH(0x7fd9890484d8)">‘<code
+   href="HASH(0x7f9f140484d8)">‘<code
    class=property>color-interpolation</code>’</a> to ‘<code
    class=css>linearRGB</code>’ or ‘<a
    href="#color-interpolation-filters"><code
    class=property>color-interpolation-filters</code></a>’ to ‘<code
    class=css>sRGB</code>’ on particular elements. Note that the examples
    below do not explicitly set either <a class=property
-   href="HASH(0x7fd9890484d8)">‘<code
+   href="HASH(0x7f9f140484d8)">‘<code
    class=property>color-interpolation</code>’</a> or ‘<a
    href="#color-interpolation-filters"><code
    class=property>color-interpolation-filters</code></a>’, so the initial
@@ -2796,7 +2796,7 @@
         stroked</i>.</p>
 
        <p> For svg this keyword represents the value of the <a class=property
-        href="HASH(0x7fd989047998)">‘<code
+        href="HASH(0x7f9f14047998)">‘<code
         class=property>stroke</code>’</a> on the target element for the
         filter effect.</p>
 
@@ -5990,7 +5990,7 @@ A' = <a
        is recommended that high quality viewers make use of appropriate
        interpolation techniques, for example bilinear or bicubic. Depending
        on the speed of the available interpolents, this choice may be
-       affected by the <a class=property href="HASH(0x7fd989047dd0)">‘<code
+       affected by the <a class=property href="HASH(0x7f9f14047dd0)">‘<code
        class=property>image-rendering</code>’</a> property setting. Note
        that implementations might choose approaches that minimize or
        eliminate resampling when not necessary to produce proper results,
@@ -6527,7 +6527,7 @@ Extended by two pixels using "duplicate":
        appropriate interpolation techniques, for example bilinear or
        bicubic.</span> Depending on the speed of the available interpolents,
        this choice may be affected by the <a class=property
-       href="HASH(0x7fd989047dd0)">‘<code
+       href="HASH(0x7f9f14047dd0)">‘<code
        class=property>image-rendering</code>’</a> property setting. Note
        that implementations might choose approaches that minimize or
        eliminate resampling when not necessary to produce proper results,
@@ -6862,7 +6862,7 @@ Extended by two pixels using "duplicate":
        class=property>fePointLight</code>’</a> or <a class=element-name
        href="#feSpotLightElement">‘<code
        class=property>feSpotLight</code>’</a>. The light color is specified
-       by property <a class=property href="HASH(0x7fd989048100)">‘<code
+       by property <a class=property href="HASH(0x7f9f14048100)">‘<code
        class=property>lighting-color</code>’</a>.</p>
 
       <h2 id=feDisplacementMapElement><span class=secno>19. </span>Filter
@@ -7142,10 +7142,10 @@ Extended by two pixels using "duplicate":
        for example bilinear or bicubic, rather than simply selecting the
        nearest source pixel. Depending on the speed of the available
        interpolents, this choice may be affected by the <a class=property
-       href="HASH(0x7fd989047dd0)">‘<code
+       href="HASH(0x7f9f14047dd0)">‘<code
        class=property>image-rendering</code>’</a> property setting.</p>
 
-      <p> The <a class=property href="HASH(0x7fd98904bbc0)">‘<code
+      <p> The <a class=property href="HASH(0x7f9f1404bbc0)">‘<code
        class=property>color-interpolation-filters</code>’</a> property only
        applies to the <a class=attr-name
        href="#feDisplacementMapIn2Attribute">‘<code
@@ -9688,7 +9688,7 @@ Extended by two pixels using "duplicate":
        href="#feDistantLightElement">‘<code
        class=property>feDistantLight</code>’</a>. The light color is
        specified by property <a class=property
-       href="HASH(0x7fd989048100)">‘<code
+       href="HASH(0x7f9f14048100)">‘<code
        class=property>lighting-color</code>’</a>.</p>
 
       <p><a href="#AnExample">The example</a> at the start of this chapter
@@ -10191,7 +10191,7 @@ Extended by two pixels using "duplicate":
 
       <p> The generated color and alpha values are in the color space
        determined by the <a class=property
-       href="HASH(0x7fd98904bbc0)">‘<code
+       href="HASH(0x7f9f1404bbc0)">‘<code
        class=property>color-interpolation-filters</code>’</a> property:</p>
 
       <pre
@@ -10863,9 +10863,9 @@ double turbulence(int nColorChannel, double *point, double <a
 
        <li>Do processing as if an <a class=element-name
         href="#feFloodElement">‘<code class=property>feFlood</code>’</a>
-        element with <a class=property href="HASH(0x7fd989048268)">‘<code
+        element with <a class=property href="HASH(0x7f9f14048268)">‘<code
         class=property>flood-color</code>’</a> and <a class=property
-        href="HASH(0x7fd989048148)">‘<code
+        href="HASH(0x7f9f14048148)">‘<code
         class=property>flood-opacity</code>’</a> as specified on the <a
         class=element-name href="#feDropShadowElement">‘<code
         class=property>feDropShadow</code>’</a> was applied:
@@ -11586,8 +11586,8 @@ double turbulence(int nColorChannel, double *point, double <a
       <p> The <i>multiplied color</i> and the <i>mix color</i> get composed
        using the alpha-compositing rules as described in the Compositing and
        Blending spec [[compositing]]. The applied alpha-compositing mode is
-       specified by the passed &lt;alpha-compositing&gt; paramter and is
-       ‘<code class=css>source-over</code>’ by default.</p>
+       specified by the passed &lt;alpha-compositing&gt; parameter and is
+       ‘<code class=css>source-atop</code>’ by default.</p>
 
       <p> The last step, <strong>step 4</strong>, shows rasterized output. If
        the custom filter primitive is the last primitive in the filter chain,
@@ -12251,10 +12251,16 @@ void main()
        the same number of filter functions, and the same functions appearing
        in the same order.</p>
 
-      <h3 id=filter-params-interpolation><span class=secno>39.1.
-       </span>Interpolating filter functions parameters</h3>
+      <p class=issue>The CSS WG may define different fading transitions in
+       the future.</p>
 
-      <p class=todo>This section has to be written.</p>
+      <h3 id=filter-params-interpolation><span class=secno>39.1.
+       </span>Interpolating filter function parameters</h3>
+
+      <p>All properties defined as animatable, provided they are one of the
+       property types listed in CSS3 Transitions <a href="#CSS3-TRANSITIONS"
+       rel=biblioentry>[CSS3-TRANSITIONS]<!--{{!CSS3-TRANSITIONS}}--></a>,
+       can be animated.</p>
 
       <h3 id=shader-params-interpolation><span class=secno>39.2.
        </span>Interpolating the shader-params component in the custom()
@@ -15036,6 +15042,16 @@ void main()
         Style Sheets Level 2 Revision 1 (CSS 2.1) Specification.</cite></a>
         7 June 2011. W3C Recommendation. URL: <a
         href="http://www.w3.org/TR/2011/REC-CSS2-20110607">http://www.w3.org/TR/2011/REC-CSS2-20110607</a>
+        </dd>
+       <!---->
+
+       <dt id=CSS3-TRANSITIONS>[CSS3-TRANSITIONS]
+
+       <dd>Dean Jackson; et al. <a
+        href="http://www.w3.org/TR/2012/WD-css3-transitions-20120403/"><cite>CSS
+        Transitions.</cite></a> 3 April 2012. W3C Working Draft. (Work in
+        progress.) URL: <a
+        href="http://www.w3.org/TR/2012/WD-css3-transitions-20120403/">http://www.w3.org/TR/2012/WD-css3-transitions-20120403/</a>
         </dd>
        <!---->
 
