@@ -1,6 +1,10 @@
 Changes for Filter Effects specification
 ----------------------------------------
 
+2012-08-10  Dirk Schulze  <dschulze@adobe.com>
+
+- Add sentence to property interpolation.
+
 2012-08-07  Dirk Schulze  <dschulze@adobe.com>
 
 - Editorial changes of 'enable-background'
